--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
     "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "^14.0.3",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
